# skriv

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.dogcats/: config.toml  issues.jsonl
.github/: dependabot.yml
.github/workflows/: release.yml  security-audit.yml
scripts/: release.sh
src/: App.svelte  Editor.svelte  TabSwitcher.svelte  editor.ts  store.test.ts  store.ts  svelte-shims.d.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/test/: setup.ts
