[package]
name = "app"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
serde_json = "=1.0.149"
serde = { version = "=1.0.228", features = ["derive"] }
log = "=0.4.29"
tauri = { version = "=2.10.2", features = [] }
tauri-plugin-log = "=2.8.0"
tauri-plugin-fs = "=2.4.5"
tauri-plugin-dialog = "=2.6.0"
tauri-plugin-updater = "=2.10.0"
tauri-plugin-process = "=2.3.1"
